# devsecops-policy-scanner

./: .gitignore  AUTHORS.md  CHANGELOG.md  CHANGELOG_CORRECTION_SUMMARY.md  CI_DEPENDENCY_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  GITHUB_ACTIONS_FIX_SUMMARY.md  GIT_PUSH_STEPS.md  LICENSE  MAINTAINERS.md  Makefile  PROJECT_SUMMARY.md  Readme.md  SECURITY.md  demo.py  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  enhanced_policy_scan.yml  policy_scan.yml
docs/: cli.md  config-security.md  contributing.md  integrations.md  ml_analysis.md  policies.md  policy-security.md  security.md
policies/: cis-kubernetes.yaml  owasp-top10.yaml  security.yaml
scripts/: train_ml_models.py
src/: advanced_scanner.py  enhanced_cli.py  enhanced_policy_engine.py  policy_checker.py  webhook.py
src/dsp_scanner/: __init__.py  cli.py
src/dsp_scanner/compliance/: __init__.py  automation.py  cis.py  hipaa.py  nist.py  pci.py
src/dsp_scanner/core/: __init__.py  policy.py  results.py  scanner.py
src/dsp_scanner/federated_learning/: __init__.py  federated_engine.py
src/dsp_scanner/marketplace/: __init__.py  policy_registry.py
src/dsp_scanner/ml/: __init__.py  ai_engine.py  analyzer.py
src/dsp_scanner/ml/features/: __init__.py  feature_extractor.py
src/dsp_scanner/ml/models/: anomaly_detector.py  risk_predictor.py  zero_day_predictor.py
src/dsp_scanner/ml/training/: __init__.py
src/dsp_scanner/monitoring/: __init__.py  realtime_monitor.py
src/dsp_scanner/platform/: __init__.py  unified_platform.py
src/dsp_scanner/policies/: __init__.py  main.json  main.rego
src/dsp_scanner/policies/docker/: __init__.py  privileged_container.json  privileged_container.rego
src/dsp_scanner/policies/helm/: __init__.py  chart_security.json  chart_security.rego
src/dsp_scanner/policies/kubernetes/: __init__.py  pod_security.json  pod_security.rego
src/dsp_scanner/policies/terraform/: __init__.py  aws_security.json  aws_security.rego
src/dsp_scanner/scanners/: __init__.py  docker.py  helm.py  kubernetes.py  terraform.py
src/dsp_scanner/utils/: __init__.py  logger.py
tests/: conftest.py  test_basic.py  test_cli.py  test_core_scanner.py  test_logger.py  test_ml_analyzer.py  test_ml_engine.py  test_policy.py  test_results.py
tests/scanners/: test_docker_scanner.py  test_helm_scanner.py  test_kubernetes_scanner.py  test_terraform_scanner.py
