[tool.poetry]
name = "devsecops-policy-scanner"
version = "0.1.0"
description = "Advanced DevSecOps Policy Scanner for Docker, Terraform, Helm, and Kubernetes"
authors = ["Olúmáyòwá Akinkuehinmi <akintunero101@gmail.com>"]
license = "MIT"
readme = "Readme.md"
packages = [{include = "devsecops_policy_scanner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
typer = "^0.4.0"
rich = "^10.12.0"
aiohttp = "^3.8.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
pyyaml = "^6.0"
jinja2 = "^3.0.1"
prometheus-client = "^0.11.0"
opentelemetry-api = "^1.3.0"
opentelemetry-sdk = "^1.3.0"
scikit-learn = "^0.24.2"
tensorflow = "^2.6.0"
opa-python = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
devsecops-policy-scanner = "devsecops_policy_scanner.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
