[project]
name = "devsecops-policy-scanner"
version = "2.1.0"
description = "Advanced DevSecOps Policy Scanner for Docker, Terraform, Helm, and Kubernetes"
authors = [{name = "Olúmáyòwá Akinkuehinmi", email = "akintunero101@gmail.com"}]
license = {text = "MIT"}
readme = "Readme.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["security", "compliance", "devsecops", "policy", "scanning", "kubernetes", "docker"]

[project.scripts]
devsecops-policy-scanner = "dsp_scanner.cli:app"
dsp-scanner = "dsp_scanner.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
name = "devsecops-policy-scanner"
version = "0.1.0"
description = "Advanced DevSecOps Policy Scanner for Docker, Terraform, Helm, and Kubernetes"
authors = ["Olúmáyòwá Akinkuehinmi <akintunero101@gmail.com>"]
license = "MIT"
readme = "Readme.md"
packages = [{include = "dsp_scanner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
typer = "^0.4.0"
rich = "^10.12.0"
aiohttp = "^3.8.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
pyyaml = "^6.0"
jinja2 = "^3.0.1"
prometheus-client = "^0.11.0"
opentelemetry-api = "^1.3.0"
opentelemetry-sdk = "^1.3.0"
scikit-learn = "^0.24.2"
tensorflow = "^2.6.0"
# opa-python removed - requires Python 3.10+, not compatible with Python 3.9 CI tests
# opa-python = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
devsecops-policy-scanner = "dsp_scanner.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
